# workspace-pydeequ

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
tests/: test_workspace_pydeequ.py
workspace_pydeequ/: sql.ipynb
