[tool.poetry]
name = "workspace-pydeequ"
version = "0.1.0"
description = ""
authors = ["hideto0710 <h.inamura0710@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
pydeequ = "^1.0.1"
pyspark = {extras = ["sql"], version = "^3.1.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
